# conversation_rag

./: pyproject.toml
src/conversation_rag/: app.py
src/conversation_rag/index/test1/: chroma.sqlite3
src/conversation_rag/rag_modules/: code_editor.py  code_search.py  vector_index.py
src/conversation_rag/repos/test1/src/main/java/org/springframework/samples/petclinic/owner/: VisitController.java
src/conversation_rag/routes/: edit.py  index.py  query.py
src/coversation_rag/: main.py
src/coversation_rag/rag_modules/: __init__.py  code_editor.py  repo_loader.py
src/coversation_rag/routes/: __init__.py  edit.py  index.py  query.py  repos.py
