[project]
name = "coversation-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "chroma (>=0.2.0,<0.3.0)",
    "transformers (>=4.54.1,<5.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "streamlit (>=1.47.1,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "torch (==2.1.2)",
    "chromadb (>=1.0.15,<2.0.0)",
    "onnxruntime (==1.16.0)",
    "openai (>=1.98.0,<2.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]

[tool.poetry]
packages = [{include = "coversation_rag", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
